traces/bug_189.txt
#189
kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6326: error: Dead Store
  The value written to `&opaque` (type `unsigned int`) is never used.

kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:6326:24: Write of unused value
6324.             "Failed to open DCP consumer connection!");
6325.     add_stream_for_consumer(
6326.             h, cookie, opaque++, Vbid(0), 0, cb::mcbp::Status::Success);
                             ^
6327. 
6328.     std::string opaqueStr("eq_dcpq:" + name + ":stream_0_opaque");
